<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white_transparent"
              android:orientation="vertical"
              tools:context=".ui.checkout.CheckoutFragment">


        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingLeft="@dimen/margin_padding_tiny"
        android:paddingRight="@dimen/margin_padding_tiny">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/cart_list_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_transparent"
            android:scrollbars="vertical"/>

        <TextView
            android:id="@+id/empty_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:padding="@dimen/margin_padding_normal"
            android:text="@string/no_cart_item_found"
            android:textColor="@color/primary_dark"
            android:textSize="@dimen/text_size_huge"
            android:textStyle="italic"
            android:visibility="gone"/>


    </RelativeLayout>


    <LinearLayout
        android:id="@+id/linear_layout_totals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="end"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold"
                android:text="@string/label_subtotal"/>

            <TextView
                android:id="@+id/text_view_sub_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="right"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold"
                android:paddingRight="5dp"
                android:text="$0.00"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_view_tax_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="end"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold"
                android:text="@string/label_tax"/>

            <TextView
                android:id="@+id/text_view_tax_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="right"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold"
                android:paddingRight="5dp"
                android:text="$0.00"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold"
                android:text="@string/label_total_amount_due"/>

            <TextView
                android:id="@+id/text_view_total_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_padding_small"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold"
                android:gravity="end"
                android:paddingRight="@dimen/margin_padding_small"
                android:text="$0.00"/>
        </LinearLayout>
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radio_group_payment_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/margin_padding_tiny"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/button_cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_type_cash"
            android:textAllCaps="true"/>

        <RadioButton
            android:id="@+id/button_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:checked="true"
            android:text="@string/payment_type_card"
            android:textAllCaps="true"/>

        <RadioButton
            android:id="@+id/button_paypal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_type_paypal"
            android:textAllCaps="true"/>

    </RadioGroup>


    <LinearLayout
        style="@style/ButtonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_padding_tiny"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/clear_cart_button"
            style="@style/ButtonBarButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear"/>

        <View
            android:layout_width="@dimen/margin_padding_large"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"/>

        <Button
            android:id="@+id/check_out_button"
            style="@style/ButtonBarButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/checkout"/>
    </LinearLayout>

</LinearLayout>
